Make a basic User model (including secure passwords)

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -3,6 +3,7 @@
     <%= link_to "Members Only", root_url, id: "logo" %>
     <nav>
       <ul class="nav navbar-nav navbar-right">
+        <li><%= link_to "Home", root_url %></li>
       </ul>
     </nav>
   </div>
