--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -8,6 +8,9 @@
   <h1>Welcome to Members Only</h1>
 
   <%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
-  <%= link_to "Log In", '#', class: "btn btn-lg btn-primary" %>
+  <%= link_to "Log In", login_path, class: "btn btn-lg btn-primary" %>
+  <br>
+  <br>
+  <%= link_to "Posts", posts_path, class: "btn btn-lg btn-primary" %>
 
 </div>
