added basic functionality for creating and accessing posts

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,13 +4,12 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@post) do |f| %>
-      <%= render 'shared/error_messages' %>
 
       <%= f.label :subject %>
       <%= f.text_field :subject, class: 'form-control' %>
 
       <%= f.label :body %>
-      <%= f.email_field :body, class: 'form-control' %>
+      <%= f.text_field :body, class: 'form-control' %>
 
       <%= f.submit "Create post", class: "btn btn-primary" %>
     <% end %>
