--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -13,4 +13,6 @@
   <br>
   <%= link_to "Posts", posts_path, class: "btn btn-lg btn-primary" %>
 
+  <h3> To complete this project you must make it so the author of each post is saved to their corresponding posts, and so that logged-in users can see this information, but non-logged-in users cannot.  This will most likely require making rails associations (has_many, belongs_to) for all post-user combos, and then adding the logic in the index page to show this info based on login status.  GOOD LUCK!!</h3>
+
 </div>
