--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -4,6 +4,7 @@
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
     <%= form_for(@post) do |f| %>
+      <%= render 'shared/post/error_messages' %>
 
       <%= f.label :subject %>
       <%= f.text_field :subject, class: 'form-control' %>
